Randevu sistemi geliştirildi
- Kullanıcı etkileşimleri iyileştirildi

--- a/src/KuaforYonetimSistemi/Views/Randevu/Index.cshtml
+++ b/src/KuaforYonetimSistemi/Views/Randevu/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<KuaforYonetimSistemi.Models.Randevu>
+﻿@using Microsoft.AspNetCore.Identity
+@model IEnumerable<KuaforYonetimSistemi.Models.Randevu>
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
 @{
     ViewData["Title"] = "Index";
@@ -6,10 +9,13 @@
 }
 
 <h1>Index</h1>
+@if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -49,11 +55,21 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Onaylandi)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+            @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+            {
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            }
+            else
+            {
+                <td>
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            }
         </tr>
 }
     </tbody>
