--- a/src/KuaforYonetimSistemi/Views/Randevu/Details.cshtml
+++ b/src/KuaforYonetimSistemi/Views/Randevu/Details.cshtml
@@ -1,4 +1,7 @@
-﻿@model KuaforYonetimSistemi.Models.Randevu
+﻿@using Microsoft.AspNetCore.Identity
+@model KuaforYonetimSistemi.Models.Randevu
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
 @{
     ViewData["Title"] = "Details";
@@ -44,6 +47,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a>
+    }
     <a asp-action="Index">Back to List</a>
 </div>
