--- a/src/KuaforYonetimSistemi/Views/Home/Index.cshtml
+++ b/src/KuaforYonetimSistemi/Views/Home/Index.cshtml
@@ -11,21 +11,21 @@
 <div id="heroSlider" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="../wwwroot/image/bir.jpeg" class="d-block w-100" alt="Kuaför randevu alım sistemi">
+            <img src="~/image/bir.jpg" class="d-block w-100" alt="Kuaför randevu alım sistemi">
             <div class="carousel-caption d-none d-md-block">
                 <h1 class="display-4">Kolay ve Hızlı Randevu</h1>
                 <p class="lead">Kuaför ve berber salonlarımızdan dilediğiniz zaman randevu alın, beklemeden hizmet alın.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="../wwwroot/image/iki.jpg" class="d-block w-100" alt="Modern salonlar">
+            <img src="~/image/iki.jpg" class="d-block w-100" alt="Modern salonlar">
             <div class="carousel-caption d-none d-md-block">
                 <h1 class="display-4">Modern Salonlar</h1>
                 <p class="lead">Salonlarımız, konforlu ortamlarıyla sizi bekliyor.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="../wwwroot/image/uc.jpeg" class="d-block w-100" alt="Hizmette mükemmellik">
+            <img src="~/image/uc.jpg" class="d-block w-100" alt="Hizmette mükemmellik">
             <div class="carousel-caption d-none d-md-block">
                 <h1 class="display-4">Hizmette Mükemmellik</h1>
                 <p class="lead">Her zaman en iyi hizmeti sunmak için buradayız.</p>
