--- a/src/KuaforYonetimSistemi/Views/Salon/Delete.cshtml
+++ b/src/KuaforYonetimSistemi/Views/Salon/Delete.cshtml
@@ -1,38 +1,38 @@
 ﻿@model KuaforYonetimSistemi.Models.Salon
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Salon Sil";
 }
 
-<h1>Delete</h1>
+<h1>Salon Sil</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Salon</h4>
+<h3>Bu salonu silmek istediğinizden emin misiniz?</h3>
+<div class="alert alert-warning">
+    <h4>Salon Bilgileri</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Isim)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Isim) (ID: @Html.DisplayFor(model => model.Id))
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Adres)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Adres)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IletisimBilgisi)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IletisimBilgisi)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.AcilisSaati)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.AcilisSaati)
         </dd>
         <dt class="col-sm-2">
@@ -45,10 +45,25 @@
 
     <span class="text-danger">Dikkat! Bu salona bağlı çalışanlar ve servisler silinecektir.</span> <br />
     <span class="text-danger">Silinmesini istemediklerinizi farklı bir salona aktarın.</span>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
 </div>
+
+<form asp-action="Delete">
+    <input type="hidden" asp-for="Id" />
+    <input type="submit" value="Sil" class="btn btn-danger" />
+    <a asp-action="Index" class="btn btn-secondary">Geri Dön</a>
+</form>
+
+<style>
+    h1, h3 {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .alert {
+        margin-top: 20px;
+    }
+
+    .btn {
+        margin-top: 10px;
+    }
+</style>
